# rbotzilla_pheonix

./: ## Chat Customization Diagnostics.md  .env.example  .env.live.example  .gitignore  ARCHITECTURE.md  AUTONOMOUS_COPILOT_DESIGN.md  AUTONOMOUS_SYSTEM_OVERVIEW.md  AUTO_RECONNECT_COMPLETE.md  CAPITAL_PRESERVATION_BUILD_SUMMARY.md  CAPITAL_PRESERVATION_QUICKSTART.sh  CAPITAL_PRESERVATION_SYSTEM.md  DASHBOARD_DEPLOYMENT_READY.md  DASHBOARD_INTEGRATION_COMPLETE.md  DASHBOARD_TEST_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_STANDALONE.md  IMPLEMENTATION_COMPLETE.txt  MEGA_PROMPT.md  MULTI_STRATEGY_CONFIRMATION.md  PROFIT_TARGET_CONFIG.md  QUICK_REFERENCE.sh  README.md  SELF_OPTIMIZATION_VERIFICATION.md  STARTUP_GUIDE.md  STATUS.sh  TEST_REPORT_LIVE_FIRE_SL.md  WORKFLOWS.md  audit_self_optimization.py  autonomous_boot.py  backtest_current_engine.py  bash -lc '.sh  cdp_api_key.json  check_bot_status.py  dashboard.py  dashboard_supervisor.py  fix_oanda.py  headless_runtime.py  hedge_fund_orchestrator.py  implementation_plan.md.resolved  maintenance_agent.py  (+25 more)
New folder/cdp-sdk-8fcfac348487f586b224b77074f52594ad44198b/examples/python/: main.py  pyproject.toml
New folder/cdp-sdk-8fcfac348487f586b224b77074f52594ad44198b/examples/python/end_user/: validate_access_token.py
New folder/cdp-sdk-8fcfac348487f586b224b77074f52594ad44198b/examples/python/evm/: account.sign_typed_data.py
New folder/cdp-sdk-8fcfac348487f586b224b77074f52594ad44198b/examples/python/evm/fund/: account.fund.py  (+3 more)
New folder/cdp-sdk-8fcfac348487f586b224b77074f52594ad44198b/examples/rust/: Cargo.toml  README.md
New folder/cdp-sdk-8fcfac348487f586b224b77074f52594ad44198b/examples/rust/examples/: evm_account_management.rs  evm_signing.rs  smart_account_management.rs  solana_account_management.rs  solana_signing.rs  token_balances.rs  wallet_client.rs
(+408 files in other folders)
