[project]
name = "examples"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "cdp-sdk",
    "solana>=0.36.6",
    "web3>=7.6.0",
    "base58>=2.1.1",
    "pydantic==2.11.3",
    "dotenv>=0.9.9",
]

[tool.uv]
package = false

[tool.uv.sources]
cdp-sdk = { path = "../../python", editable = true }
